do highlight modify test

--- a/_posts/2016-05-14-中文测试.md
+++ b/_posts/2016-05-14-中文测试.md
@@ -5,7 +5,7 @@ date: 2016-05-14 18:11:52 +0800
 categories: 测试
 ---
 这是使用 jekyll 安装的博客，现在正在测试 markdown 中文表现。
-
+<!-- more -->
 代码高亮
 
 ```javascript
